# gnome-shell-extension-grub

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README.md  configure.ac
data/: metadata.json.in  org.gnome-shell-extension-grub.grub2-set-default.policy  org.gnome-shell-extension-grub.grub2-set-default.policy.in
po/: LINGUAS  POTFILES.in  en_US.po  gnome-shell-extension-grub.pot  messages.pot  nl_NL.po
src/: config.js.in  convenience.js  extension.js  grubLoader.js
